<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/num_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Num :"
            android:textSize="30dp"
            android:layout_marginEnd="20dp" />
        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V001"
            android:textSize="20dp"
            android:layout_marginEnd="20dp" />
    <TextView
        android:id="@+id/nom_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_nom_titre"
        android:textSize="30dp"
        android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/nom"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/default_nom"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nb_jour_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/default_nb_jours_titre"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nb_jour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/default_nb_jours"
            android:textSize="20dp" />
        <!-- Ajout de la marge de 20dp à droite -->
        <TextView
            android:id="@+id/TJ_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/default_tarifJ_titre"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/TJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/default_tarifJ"
            android:textSize="20dp" /> <!-- Ajout de la marge de 20dp à gauche -->
        <TextView
            android:id="@+id/T_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/default_tarif_titre"
            android:textSize="20dp" /> <!-- Ajout de la marge de 20dp à droite -->

        <TextView
            android:id="@+id/T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/default_tarif"
            android:textSize="20dp" />


    </LinearLayout>



</LinearLayout>
